add possibility to retrieve oauth2 access token for user

--- a/src/it/resources/application.conf
+++ b/src/it/resources/application.conf
@@ -8,3 +8,12 @@ ldap {
     }
   }
 }
+oauth2 {
+  oauth2Api {
+    auth = "basic"
+    basic {
+      username = "testuser"
+      password = "testpass"
+    }
+  }
+}
