--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -132,6 +132,40 @@ jwt {
     publicKey = ${?LDAP_API_JWT_PUBLIC_KEY}
     publicKeyFile = ${?LDAP_API_JWT_PUBLIC_KEY_FILE}
   }
+  oauth2Provider {
+    expirationTime = "1h"
+    expirationTime = ${?OAUTH2_API_JWT_EXPIRATION_TIME}
+    // Symmetric: HMD5 | HS224 | HS256 | HS384 | HS512
+    // Asymmetric: RS256 | RS384 | RS512 | ES256 | ES384 | ES512
+    algorithm = "RS256"
+    algorithm = ${?OAUTH2_API_JWT_ALGORITHM}
+    secret = "secret_oauth2"
+    secret = ${?OAUTH2_API_JWT_SECRET}
+    secretFile = ${?OAUTH2_API_JWT_SECRET_FILE}
+    privateKey = ""
+    privateKey = ${?OAUTH2_API_JWT_PRIVATE_KEY}
+    privateKeyFile = ${?OAUTH2_API_JWT_PRIVATE_KEY_FILE}
+    publicKey = ""
+    publicKey = ${?OAUTH2_API_JWT_PUBLIC_KEY}
+    publicKeyFile = ${?OAUTH2_API_JWT_PUBLIC_KEY_FILE}
+  }
+  oauth2ApiProvider {
+    expirationTime = "1h"
+    expirationTime = ${?OAUTH2_API_PROVIDER_JWT_EXPIRATION_TIME}
+    // Symmetric: HMD5 | HS224 | HS256 | HS384 | HS512
+    // Asymmetric: RS256 | RS384 | RS512 | ES256 | ES384 | ES512
+    algorithm = "RS256"
+    algorithm = ${?OAUTH2_API_PROVIDER_JWT_ALGORITHM}
+    secret = "secret_oauth2"
+    secret = ${?OAUTH2_API_PROVIDER_JWT_SECRET}
+    secretFile = ${?OAUTH2_API_PROVIDER_JWT_SECRET_FILE}
+    privateKey = ""
+    privateKey = ${?OAUTH2_API_PROVIDER_JWT_PRIVATE_KEY}
+    privateKeyFile = ${?OAUTH2_API_PROVIDER_JWT_PRIVATE_KEY_FILE}
+    publicKey = ""
+    publicKey = ${?OAUTH2_API_PROVIDER_JWT_PUBLIC_KEY}
+    publicKeyFile = ${?OAUTH2_API_PROVIDER_JWT_PUBLIC_KEY_FILE}
+  }
 }
 
 callback {
@@ -178,6 +212,16 @@ escher {
       secret-file = ${?ESCHER_SERVICE_LDAP_API_SECRET_FILE}
       credential-scope = "eu/tutelar/request"
       credential-scope =  ${?ESCHER_SERVICE_LDAP_API_SCOPE}
+    }
+    {
+      name = "oauth2-api"
+      key = "oauth2-api-service-key"
+      key = ${?ESCHER_SERVICE_OAUTH2_API_KEY}
+      secret = "oauth2-api-service-secret-key"
+      secret = ${?ESCHER_SERVICE_OAUTH2_API_SECRET}
+      secret-file = ${?ESCHER_SERVICE_OAUTH2_API_SECRET_FILE}
+      credential-scope = "eu/tutelar/request"
+      credential-scope =  ${?ESCHER_SERVICE_OAUTH2_API_SCOPE}
     }
   ]
 }
@@ -232,6 +276,32 @@ oauth2 {
     clientSecret = ${?FACEBOOK_CLIENT_SECRET}
     clientSecretFile = ${?FACEBOOK_CLIENT_SECRET_FILE}
     scopes = "public_profile"
+    // basic, escher, jwt, custom header, blocked
+    auth = "blocked"
+    auth = ${?FACEBOOK_API_AUTH}
+    basic {
+      username = ""
+      username = ${?FACEBOOK_API_BASIC_USERNAME}
+      password = ""
+      password = ${?FACEBOOK_API_BASIC_PASSWORD}
+      passwordFile = ${?FACEBOOK_API_BASIC_PASSWORD_FILE}
+    }
+    customHeader {
+      headername = "Api-Key"
+      headername = ${?FACEBOOK_API_CUSTOM_HEADER_NAME}
+      secret = ""
+      secret = ${?FACEBOOK_API_CUSTOM_HEADER_SECRET}
+      secretFile = ${?FACEBOOK_API_CUSTOM_HEADER_SECRET_FILE}
+    }
+    escher {
+      trustedServices = "oauth2-api"
+      trustedServices = ${?OAUTH2_API_ESCHER_TRUSTED_SERVICES}
+    }
+    jwt {
+      // See config: jwt.<<NAME>>
+      configName = "oauth2ApiProvider"
+      configName = ${?OAUTH2_API_JWT_CONFIG_NAME}
+    }
   }
 
   github {
@@ -239,6 +309,32 @@ oauth2 {
     clientSecret = ${?GITHUB_CLIENT_SECRET}
     clientSecretFile = ${?GITHUB_CLIENT_SECRET_FILE}
     scopes = "read:user,gist"
+    // basic, escher, jwt, custom header, blocked
+    auth = "blocked"
+    auth = ${?GITHUB_API_AUTH}
+    basic {
+      username = ""
+      username = ${?GITHUB_API_BASIC_USERNAME}
+      password = ""
+      password = ${?GITHUB_API_BASIC_PASSWORD}
+      passwordFile = ${?GITHUB_API_BASIC_PASSWORD_FILE}
+    }
+    customHeader {
+      headername = "Api-Key"
+      headername = ${?GITHUB_API_CUSTOM_HEADER_NAME}
+      secret = ""
+      secret = ${?GITHUB_API_CUSTOM_HEADER_SECRET}
+      secretFile = ${?GITHUB_API_CUSTOM_HEADER_SECRET_FILE}
+    }
+    escher {
+      trustedServices = "oauth2-api"
+      trustedServices = ${?OAUTH2_API_ESCHER_TRUSTED_SERVICES}
+    }
+    jwt {
+      // See config: jwt.<<NAME>>
+      configName = "oauth2ApiProvider"
+      configName = ${?OAUTH2_API_JWT_CONFIG_NAME}
+    }
   }
 
   google {
@@ -246,6 +342,32 @@ oauth2 {
     clientSecret = ${?GOOGLE_CLIENT_SECRET}
     clientSecretFile = ${?GOOGLE_CLIENT_SECRET_FILE}
     scopes = "openid,email,profile"
+    // basic, escher, jwt, custom header, blocked
+    auth = "blocked"
+    auth = ${?GOOGLE_API_AUTH}
+    basic {
+      username = ""
+      username = ${?GOOGLE_API_BASIC_USERNAME}
+      password = ""
+      password = ${?GOOGLE_API_BASIC_PASSWORD}
+      passwordFile = ${?GOOGLE_API_BASIC_PASSWORD_FILE}
+    }
+    customHeader {
+      headername = "Api-Key"
+      headername = ${?GOOGLE_API_CUSTOM_HEADER_NAME}
+      secret = ""
+      secret = ${?GOOGLE_API_CUSTOM_HEADER_SECRET}
+      secretFile = ${?GOOGLE_API_CUSTOM_HEADER_SECRET_FILE}
+    }
+    escher {
+      trustedServices = "oauth2-api"
+      trustedServices = ${?OAUTH2_API_ESCHER_TRUSTED_SERVICES}
+    }
+    jwt {
+      // See config: jwt.<<NAME>>
+      configName = "oauth2ApiProvider"
+      configName = ${?OAUTH2_API_JWT_CONFIG_NAME}
+    }
   }
 
   microsoft {
@@ -253,6 +375,32 @@ oauth2 {
     clientSecret = ${?MICROSOFT_CLIENT_SECRET}
     clientSecretFile = ${?MICROSOFT_CLIENT_SECRET_FILE}
     scopes = "user.read"
+    // basic, escher, jwt, custom header, blocked
+    auth = "blocked"
+    auth = ${?MICROSOFT_API_AUTH}
+    basic {
+      username = ""
+      username = ${?MICROSOFT_API_BASIC_USERNAME}
+      password = ""
+      password = ${?MICROSOFT_API_BASIC_PASSWORD}
+      passwordFile = ${?MICROSOFT_API_BASIC_PASSWORD_FILE}
+    }
+    customHeader {
+      headername = "Api-Key"
+      headername = ${?MICROSOFT_API_CUSTOM_HEADER_NAME}
+      secret = ""
+      secret = ${?MICROSOFT_API_CUSTOM_HEADER_SECRET}
+      secretFile = ${?MICROSOFT_API_CUSTOM_HEADER_SECRET_FILE}
+    }
+    escher {
+      trustedServices = "oauth2-api"
+      trustedServices = ${?OAUTH2_API_ESCHER_TRUSTED_SERVICES}
+    }
+    jwt {
+      // See config: jwt.<<NAME>>
+      configName = "oauth2ApiProvider"
+      configName = ${?OAUTH2_API_JWT_CONFIG_NAME}
+    }
   }
 }
 
@@ -274,7 +422,7 @@ ldap {
   userSearchReturnArrayAttributes = ${?LDAP_USER_SEARCH_RETURN_ARRAY_ATTRIBUTES}
 
   ldapApi {
-    // basic, escher, jwt, blocked
+    // basic, escher, jwt, custom header, blocked
     auth = "blocked"
     auth = ${?LDAP_API_AUTH}
     basic {
@@ -292,6 +440,13 @@ ldap {
       // See config: jwt.<<NAME>>
       configName = "ldapProvider"
       configName = ${?LDAP_API_JWT_CONFIG_NAME}
+    }
+    customHeader {
+      headername = "Api-Key"
+      headername = ${?LDAP_API_CUSTOM_HEADER_NAME}
+      secret = ""
+      secret = ${?LDAP_API_CUSTOM_HEADER_SECRET}
+      secretFile = ${?LDAP_API_CUSTOM_HEADER_SECRET_FILE}
     }
   }
 }
