--- a/src/test/resources/application.conf
+++ b/src/test/resources/application.conf
@@ -59,24 +59,28 @@ oauth2 {
     clientId = "clientId"
     clientSecret = "clientSecret"
     scopes = "read:user"
+    auth = "blocked"
   }
 
   google {
     clientId = "clientId"
     clientSecret = "clientSecret"
     scopes = "openid,email,profile"
+    auth = "blocked"
   }
 
   facebook {
     clientId = "clientId"
     clientSecret = "clientSecret"
     scopes = "public_profile"
+    auth = "blocked"
   }
 
   microsoft {
     clientId = "clientId"
     clientSecret = "clientSecret"
     scopes = "user.read"
+    auth = "blocked"
   }
 }
 
@@ -148,6 +152,13 @@ exampleServiceApiJwt {
   auth = "jwt"
   jwt {
     configName = "example"
+  }
+}
+exampleServiceApiCustomHeader{
+  auth = "custom_header"
+  customHeader {
+    headername = "Custom-Header-Auth"
+    secret = "top secret"
   }
 }
 exampleServiceApiBlocked {
